# ClotLang

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ClotProgrammingLanguage.sln  LICENSE.txt  MULTIPARADIGM_PLAN.md  Makefile  PKGBUILD  README.md  test  test.clot  testw.clot
.github/workflows/: build-linux.yml  ci.yml  release.yml
ClotProgrammingLanguage/: Clot.h  ClotProgrammingLanguage.cpp  ClotProgrammingLanguage.vcxproj  ClotProgrammingLanguage.vcxproj.filters  ConditionEvaluator.cpp  ConditionEvaluator.h  ConditionalStatement.cpp  ConditionalStatement.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionExecution.cpp  FunctionExecution.h  ModuleImporter.cpp  ModuleImporter.h  PrintStatement.cpp  PrintStatement.h  Tokenizer.cpp  Tokenizer.h  VariableAssignment.cpp  VariableAssignment.h  build.sh  clot  test.clot  test.cpp
TokenizerTests/: TokenizerTests.vcxproj  test.cpp
benchmarks/: README.md  baseline.sh
benchmarks/cases/: function_dispatch.clot  numeric_loop.clot  oop_dispatch.clot
clot/: README.md
docs/: MULTIPARADIGM_PLAN.md  architecture.md  clot_documentacion.html  docs-page.html  index.html
docs/clotlang-syntax/: CHANGELOG.md  LICENSE  README.md  clotlang-syntax-0.0.1.vsix  clotlang-syntax-0.0.2.vsix  package.json  vsc-extension-quickstart.md
examples/: basic.clot  cash_register.clot  main.clot
modules/: utils.clot
scripts/: check.sh  diff_interpret_compile.sh  install.ps1  install.sh  install_llvm_wsl.sh  uninstall.ps1  uninstall.sh
src/cli/: main.cpp
tests/: llvm_smoke.sh  smoke.sh
(+108 files in other folders)
